hermes_fuzz_executed/fuzz_77_execution
'use strict';
let a = {};
a.foo = async () => {
    return 1 + 2;
};
a.toString();
 
'use strict';
let a = {};
const fooString = async () => {
    return 1 + 2;
};
a.foo = fooString;
a.toString = fooString;
a;


Execution Output ------------------:
test.js:3:9: error: async functions are unsupported
a.foo = async () => {
        ^~~~~~~~~~~~~
test.js:10:19: error: async functions are unsupported
const fooString = async () => {
                  ^~~~~~~~~~~~~
Emitted 2 errors. exiting.
